# sbk

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
kbs/: __init__.py  config.py
kbs/core/: database.py  file_manager.py  health.py  tasks.py
kbs/core/embeddings/: factory.py  openai.py  sentence_transformer.py
kbs/models/: knowledge_base.py  schemas.py
kbs/services/: document_service.py  knowledge_base_service.py  retrieval_service.py  vector_service.py
sbk/: config.py
sbk/core/: database.py  exceptions.py
sbk/core/embeddings/: base.py  factory.py  openai.py
sbk/models/: knowledge_base.py
sbk/services/: document_service.py  knowledge_base_service.py  retrieval_service.py  vector_service.py
